--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,9 +47,11 @@
                 android:layout_weight="1"
                 android:text="@string/HismileSignIn"/>
             <Button
+                android:id="@+id/btnWXRedPack"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:text="@string/WXRedPack"/>
         </LinearLayout>
 
 
