--- a/app/src/main/res/layout/activity_mobile_no_track.xml
+++ b/app/src/main/res/layout/activity_mobile_no_track.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MobileNoTrack.MobileNoTrackActivity">
+    tools:context=".mobile_no_track.MobileNoTrackActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
