--- a/app/src/main/res/layout/activity_netword_telephone.xml
+++ b/app/src/main/res/layout/activity_netword_telephone.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NetworkTelephone.Model.NetwordTelephoneActivity">
+    tools:context=".network_telephone.NetwordTelephoneActivity">
     <ListView
         android:id="@+id/lvNetwordTelephone"
         android:layout_width="match_parent"
