微信抢红包优化

--- a/app/src/main/res/layout/activity_mobile_no_track.xml
+++ b/app/src/main/res/layout/activity_mobile_no_track.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,7 +13,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="手机号码归属地查询"
+            android:text="@string/phone_num_attribution"
             android:layout_gravity="center"/>
         <EditText
             android:id="@+id/edtPhoneNumb"
@@ -23,14 +22,14 @@
             android:layout_marginTop="20dp"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="40dp"
-            android:hint="请输入手机号码"/>
+            android:hint="@string/enter_phone_num"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="40dp"
-            android:text="查询结果"/>
+            android:text="@string/query_results"/>
         <TextView
             android:id="@+id/txtPhoneNumb"
             android:layout_width="wrap_content"
